Fixed the dang link issue

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Odin Recipe's</h1>
-    <p> <a href ="../recipes/chicken_parm.html">Chicken Parm</a></p>
+    <p> <a href ="recipes/chicken_parm.html">Chicken Parm</a></p>
 </body>
 </html>
