Added ingredient list and directions to chicken parm page

--- a/chicken_parm.html
+++ b/chicken_parm.html
@@ -10,7 +10,23 @@
     <h1>
         Chicken Parm
     </h1>
-    <img src="https://en.wikipedia.org/wiki/Chicken_parmigiana#/media/File:Chicken_parm_at_a_diner.jpg" alt="Chicken Parm on a plate">
-    
+    <img src="https://upload.wikimedia.org/wikipedia/commons/1/17/Chicken_parm_at_a_diner.jpg" alt="Chicken Parm on a plate">
+    <h3> Recipe </h3>
+    <p>Chicken Parm rocks cock and I'll tell you how to make it in a couple easy steps</p>
+    <p>Ingredients:</p>
+    <ui>
+        <li>1 pound of chicken</li>
+        <li>bread crumbs</li>
+        <li>parmesan cheese</li>
+        <li>mozzarella cheese</li>
+        <li>red sauce</li>
+    </ui>
+    <h3>
+        Steps
+    </h3>
+    <ol>
+        <li>Get the fuck after it</li>
+        <li>cook the chicken</li>
+    </ol>
 </body>
 </html>
