added spaghet and pepe :p

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Odin Recipe's</h1>
     <p> <a href ="recipes/chicken_parm.html">Chicken Parm</a></p>
+    <p> <a href ="recipes/spaghetti.html">Spaghetti</a></p>
 </body>
 </html>
