styled the title

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -10,7 +10,7 @@
     <h1>
         Spaghetti
     </h1>
-    <img src="https://www.istockphoto.com/photo/spaghetti-in-a-dish-on-a-white-background-gm1144823591-307940917" alt="Spaghetti on a plate">
+    <img src="spaghettipockets.jpg" alt="Spaghetti falling out of pepe's pockets">
     <h3> Recipe </h3>
     <p>Spaghetti rocks cock and I'll tell you how to make it in a couple easy steps</p>
     <p>Ingredients:</p>
